bitfields/tests/compile_error_cases/errors/bitfield_field_float32_identifier_default_value.stderr
error: Float are not supported.
 --> tests/compile_error_cases/errors/bitfield_field_float32_identifier_default_value.rs:5:22
  |
5 |     #[bits(default = 0f32)]
  |                      ^^^^
